# webscraper-epuskesmas

./: .gitignore  pyproject.toml
src/: main.py
src/automation/: base_automation.py  patient_service_automation.py  visit_automation.py
src/config/: download_handler.py  untils.py
